# pixel-border-creator

./: .gitignore  AGENTS.md  IDEA.md  README.md  pyproject.toml
.agents/: git-installable-package.md  public-editor-local-saves.md
config/: settings.py  urls.py
pixelborders/: admin.py  ai.py  apps.py  css.py  forms.py  models.py  urls.py  views.py
pixelborders/migrations/: 0001_initial.py  0002_pixelborderdesign_border_repeat.py
pixelborders/static/pixelborders/: app.css  editor.js
pixelborders/templates/pixelborders/: _design_list.html  _editor_panel.html  _workspace.html  editor.html  login.html
pixelborders/tests/: test_models.py  test_views.py
